--- a/src/app/Modules/catalog/catalog-items/catalog-items.component.html
+++ b/src/app/Modules/catalog/catalog-items/catalog-items.component.html
@@ -1,8 +1,8 @@
 <div class="container__items">
     <div class="container__wrap"
         *ngFor="let item of itemsData |async | paginate: { itemsPerPage: pageSize, currentPage: p }">
-        <div class="container__item">
-            <img [src]="getItems()" alt="img1" class="image-item">
+        <div class="container__item" [routerLink]="['/catalog',item.name]" [queryParams]="{categoryName:item.category.name}">
+            <img [src]="getItemImage(item.photo)" alt="img1" class="image-item">
             <h5 class="container__title">{{item.name}}</h5>
             <h6 class="opacity">{{item.category.name}}</h6>
             <p class="container__paragraph">€{{item.priceDto.price}} EUR</p>
