--- a/src/app/Modules/catalog/catalog-categories/product-details.component.scss
+++ b/src/app/Modules/catalog/catalog-categories/product-details.component.scss
@@ -1,13 +1,13 @@
 @import "../../../styles/_variables.scss";
 @import "../../../styles/_mixins.scss";
 
-.wrapper-catalogies {
+.wrapper-product {
     margin: 0 auto;
     width: 144rem;
 }
-.container-catalogies {
+.container-product {
     max-width: 100%;
-    margin: 0 11.5% 15rem 11.5%;
+    margin: 0 10.5% 0 11.5%;
     &__line {
         background: $color_darkgrey;
         opacity: 0.2;
@@ -15,89 +15,113 @@
         margin-top: 1.6rem;
     }
     &__path {
-        margin: 2.6rem auto;
+        margin: 2.6rem 0 4.4rem 0;
+        flex-wrap: wrap;
     }
-    &__line-main {
-        background: $color_darkgrey;
-        opacity: 0.2;
-        height: 1px;
-        margin-top: 3.1rem;
-        margin-bottom: 4.2rem;
-    }
-    &__title {
-        background: $color_gradient;
-        background-clip: text;
-        -webkit-text-fill-color: transparent;
-        font-weight: 800;
-        font-size: 4.8rem;
-        line-height: 120%;
-        margin-right: 12%;
-        margin-bottom: 2.4rem;
-    }
-    &__text {
-        @include font(Montserrat, normal, 400, 1.8rem, 150%, 0em, $color_black);
-        margin-bottom: 2.5rem;
-    }
-    &__filter-products {
-        margin-bottom: 0rem;
+    &__photo-description {
         display: flex;
         justify-content: flex-start;
     }
-    &__filter {
-        width: 25.5rem;
-        margin-top: 1.1rem;
+    &__photo {
+        margin-right: 6.1rem;
     }
-    &__filter-title {
-        @include font(Montserrat, normal, 700, 2.8rem, 120%, 0em, $color_darkgrey);
-        margin-bottom: 3.5rem;
+    &__photo-image {
+        @include wihi(54rem, 54rem);
+        margin-bottom: 3rem;
+        border: 1px solid $color_lightgrey;
+        box-sizing: border-box;
+        border-radius: 10px;
+        #itemImage {
+            @include wihi(100%, 100%);
+            border-radius: 10px;
+        }
     }
-    &__filter-cost {
-        margin-bottom: 4.2rem;
+    &__photo-images {
+        margin-bottom: 8.2rem;
     }
-    &__filter-cost-title {
-        @include font(Montserrat, normal, 700, 1.8rem, 150%, 0em, $color_darkgrey);
-        margin-bottom: 1.4rem;
+    &__descriptoin-title {
+        background: $color_gradient;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: 700;
+        font-size: 3.6rem;
+        line-height: 110%;
+        margin-bottom: 3rem;
     }
-    &__filter-cost-min-max {
-        margin-bottom: 2.9rem;
+    &__descriptoin-description {
+        @include font(Montserrat, normal, 400, 1.8rem, 150%, 0em, $color_black);
+        margin-bottom: 6.1rem;
+        width: 50.9rem;
     }
-    &__filter-category {
-        margin-top: 5.2rem;
-        margin-bottom: 4.5rem;
-    }
-    &__filter-category-title {
-        @include font(Montserrat, normal, 700, 1.8rem, 150%, 0em, $color_darkgrey);
-        margin-bottom: 2.2rem;
-    }
-    &__filter-additional {
-        margin-bottom: 4.2rem;
-    }
-    &__filter-additional-title {
-        @include font(Montserrat, normal, 700, 1.8rem, 150%, 0em, $color_darkgrey);
-        margin-bottom: 1.2rem;
-    }
-    &__filter-buttons-button1 {
-        display: block;
-        margin-bottom: 2.3rem;
-    }
-    &__products-title {
-        margin-bottom: 3.1rem;
-        margin-left: 1.5rem;
+    &__descriptoin-price {
         display: flex;
         justify-content: space-between;
     }
-    &__products {
-        margin-left: 1.5rem;
-        width: 100%;
-        margin-bottom: 0rem;
+    &__descriptoin-price-euro {
+        @include font(Montserrat, normal, 700, 3.6rem, 110%, 0em, $color_darkgrey);
+        margin-bottom: 4.9rem;
     }
-    &__products-quantity {
-        @include font(Montserrat, normal, 700, 1.8rem, 150%, 0em, $color_darkgrey);
-        margin-top: 1.1rem;
+    &__descriptoin-price-changes {
+        background: url("../../../../assets/img-home/priceChanges.png") 0 1.2rem no-repeat;
+        padding-left: 3.6rem;
+        padding-top: 1.2rem;
+        @include font(Montserrat, normal, 400, 1.8rem, 150%, 0em, $color_pink);
     }
-    &__mobile-buttons {
-        display: none;
+    &__descriptions {
+        margin-bottom: 10.6rem;
     }
+    &__descriptions-title {
+        @include font(Montserrat, normal, 700, 2.8rem, 120%, 0em, $color_darkgrey);
+        margin-bottom: 3rem;
+    }
+    &__descriptions-descriptions {
+        @include font(Montserrat, normal, 400, 1.8rem, 150%, 0em, $color_darkgrey);
+        margin-bottom: 5.9rem;
+        width: 74%;
+    }
+    &__flowers {
+        display: flex;
+        justify-content: flex-start;
+        margin-bottom: 1.9rem;
+        border-radius: 1rem;
+        background-color: $color_lightwhite;
+        @include wihi(100%, 38rem);
+        align-items: center;
+        .container__picture {
+            margin-left: 5rem;
+            padding-right: 1rem;
+            .image-flower {
+                @include wihi(30rem, 30rem);
+            }
+        }
+    }
+    &__figcapture {
+        @include font(Montserrat, normal, normal, 1.4rem, 150%, 0em, $color_grey);
+        margin: 1.9rem 0 3.9rem 0;
+    }
+    &__text {
+        @include font(Montserrat, normal, 400, 1.6rem, 170%, 0em, $color_darkgrey);
+        margin-bottom: 1.7rem;
+        width: 74%;
+    }
+}
+#itemImageMini1,
+#itemImageMini {
+    margin-right: 3rem;
+    @include wihi(16rem, 16rem);
+    border: 1px solid $color_lightgrey;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+#itemImageMini1:hover {
+    border: 1px solid $color_pink;
+}
+#itemImageMini:hover {
+    border: 1px solid $color_pink;
+}
+.active {
+    border: 3px solid $color_pink;
+    box-sizing: border-box;
 }
 .container__home {
     margin-right: 2.6rem;
@@ -109,351 +133,214 @@
     margin-right: 2.6rem;
     margin-top: 0.35rem;
 }
+.button {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    @include wihi(35rem, 5.7rem);
+    background: $color_green;
+    border-radius: 10px;
+    padding-left: 4.4rem;
+    #imageBaggy {
+        width: 1.7rem;
+        margin-right: 6rem;
+    }
+    .button__paragraph {
+        @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_white);
+        text-align: left;
+        padding-left: 1rem;
+    }
+}
+.button:hover {
+    background: $color_darkgreen;
+}
+.button:active {
+    #imageBaggy {
+        padding-top: 0.2rem;
+    }
+    .button__paragraph {
+        padding-top: 0.2rem;
+    }
+}
 .container__catalogs {
     @include font(Montserrat, normal, normal, 1.4rem, 150%, 0em, $color_lightdarkgrey);
 }
-.p-float-label {
-    @include wihi(100%, 5rem);
-}
-.filter-min,
-.filter-max {
-    @include font(Montserrat, normal, 400, 1.6rem, 170%, 0em, $color_grey);
-}
-:host {
-    ::ng-deep p-inputnumber.p-element.p-inputwrapper {
-        height: 5rem;
-    }
-
-    ::ng-deep p-inputnumber {
-        justify-content: center;
-    }
-
-    ::ng-deep #currency-min {
-        width: 12rem;
-        margin-right: 1.5rem;
-    }
-
-    ::ng-deep #currency-max {
-        width: 12rem;
-    }
-
-    ::ng-deep .p-inputtext {
-        @include font(Montserrat, normal, 400, 1.6rem, 170%, 0em, $color_darkgrey);
-        padding: 0.5rem;
-        border-radius: 0.4rem;
-        border: 1px solid $color_lightgrey;
-    }
-
-    ::ng-deep .p-inputtext:enabled:hover {
-        border-color: $color_darkgrey;
-    }
-
-    ::ng-deep .p-inputtext:enabled:focus {
-        box-shadow: none;
-        border-color: $color_darkgrey;
-    }
-
-    ::ng-deep .p-float-label label {
-        top: 0.8rem;
-        margin-top: 0.4rem;
-    }
-
-    ::ng-deep .p-float-label .p-inputwrapper-focus ~ label,
-    ::ng-deep .p-float-label .p-inputwrapper-filled ~ label {
-        top: -0.5rem;
-    }
-
-    ::ng-deep .p-slider {
-        background-color: $color_lightgrey;
-        width: 25.5rem;
-    }
-
-    ::ng-deep .p-slider .p-slider-range {
-        background: $color_pink;
-    }
-
-    ::ng-deep .p-slider.p-slider-horizontal {
-        height: 0.3rem;
-        width: 25.5rem;
-    }
-
-    ::ng-deep .p-slider .p-slider-handle {
-        @include wihi(2.1rem, 2.1rem);
-        background: $color_pink;
-        border: none;
-        cursor: pointer;
-        transition: box-shadow 0.2s;
-    }
-
-    ::ng-deep .p-slider .p-slider-handle:focus {
-        box-shadow: 0 0 0 0.2rem $color_lightpink;
-    }
-
-    ::ng-deep .p-slider:not(.p-disabled) .p-slider-handle:hover {
-        background: $color_pink;
-        box-shadow: 0 0 0 0.2rem $color_lightpink;
-    }
-
-    ::ng-deep .p-slider.p-slider-horizontal .p-slider-handle {
-        margin-top: -1rem;
-    }
-
-    ::ng-deep .p-checkbox {
-        @include wihi(2rem, 2rem);
-    }
-
-    ::ng-deep .p-checkbox .p-checkbox-box {
-        border: 1px solid $color_grey;
-        box-sizing: border-box;
-        border-radius: 0.4rem;
-        @include wihi(2rem, 2rem);
-    }
-
-    ::ng-deep .p-checkbox .p-checkbox-box.p-highlight {
-        background: $color_green;
-    }
-
-    ::ng-deep .p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box.p-highlight:hover {
-        border-color: $color_green;
-        background: $color_green;
-    }
-
-    ::ng-deep .p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box:hover {
-        border-color: $color_green;
-    }
-
-    ::ng-deep .p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box.p-focus {
-        border-color: $color_green;
-        box-shadow: none;
-    }
-
-    ::ng-deep .p-checkbox-label {
-        @include font(Montserrat, normal, 400, 1.8rem, 150%, 0em, $color_darkgrey);
-        margin-left: 2.4rem;
-    }
-
-    ::ng-deep .p-checkbox-label-active {
-        font-weight: 700;
-    }
-    ::ng-deep .p-button {
-        @include wihi(25.5rem, 5.7rem);
-        padding: 2rem 5.6rem;
-        border-radius: 1rem;
-        background: $color_green;
-        border: none;
-        @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_white);
-    }
-    ::ng-deep .container-catalog__filter-buttons-button1 .p-button-label {
-        @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_white);
-        text-transform: uppercase;
-    }
-    ::ng-deep .container-catalog__filter-buttons-button1 .p-button:hover {
-        background: $color_darkgreen;
-    }
-    ::ng-deep .container-catalog__filter-buttons-button1 .p-button:active {
-        padding-top: 2.1rem;
-    }
-    ::ng-deep .container-catalog__filter-buttons-button1 .p-button:focus {
-        box-shadow: none;
-    }
-    ::ng-deep .p-button.p-button-success.p-button-outlined {
-        border: 1px solid $color_green;
-        color: $color_green;
-        background-color: $color_white;
-    }
-
-    ::ng-deep .p-button-success .p-button-label {
-        @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_green);
-        text-transform: uppercase;
-    }
-
-    ::ng-deep .p-button-success .p-button-label:hover {
-        color: $color_darkgreen;
-    }
-
-    ::ng-deep .p-button.p-button-success.p-button-outlined:hover {
-        border-color: $color_darkgreen;
-        background: $color_white;
-    }
-
-    ::ng-deep .p-button.p-button-success.p-button-outlined:active {
-        padding-top: 2.1rem;
-    }
-
-    ::ng-deep .p-button.p-button-success.p-button-outlined:focus {
-        box-shadow: none;
-    }
-
-    ::ng-deep .pi {
-        font-size: 1.3rem;
-    }
-
-    ::ng-deep .p-button .p-button-icon-left {
-        margin-right: 1rem;
-    }
-
-    ::ng-deep .p-dropdown {
-        @include wihi(25.5rem, 5rem);
-        border: 1px solid $color_lightgrey;
-        border-radius: 0.4rem;
-    }
-
-    ::ng-deep .p-dropdown:not(.p-disabled):hover {
-        border-color: $color_darkgrey;
-    }
-
-    ::ng-deep .p-dropdown:not(.p-disabled).p-focus {
-        border-color: $color_darkgrey;
-        box-shadow: none;
-    }
-
-    ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder {
-        @include font(Montserrat, normal, 400, 1.8rem, 150%, 0em, $color_darkgrey);
-        padding: 1rem 2.9rem;
-        border: none;
-    }
-
-    ::ng-deep .p-dropdown .p-dropdown-label.p-inputtext {
-        @include font(Montserrat, normal, 400, 1.8rem, 150%, 0em, $color_darkgrey);
-        padding: 1rem 2.9rem;
-        border: none;
-    }
-
-    ::ng-deep .p-dropdown .p-dropdown-trigger {
-        width: 5rem;
-        color: $color_darkgrey;
-    }
-
-    ::ng-deep .p-dropdown .p-dropdown-clear-icon {
-        color: $color_darkgrey;
-        right: 5rem;
-    }
-
-    ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight {
-        color: $color_darkgrey;
-        background: $color_lightpink;
-    }
-
-    ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item {
-        background: $color_white;
-    }
-
-    ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item .ng-star-inserted {
-        @include font(Montserrat, normal, 400, 1.4rem, 150%, 0em, $color_darkgrey);
-    }
-
-    ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item:hover {
-        color: $color_darkgrey;
-        background: $color_pink;
-    }
-
-    ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight:hover {
-        color: $color_darkgrey;
-        background: $color_pink;
-    }
-}
-
-.field-checkbox {
-    margin-bottom: 2rem;
-}
-
 .container-banners {
-    margin-left: 14%;
+    margin-left: 11%;
 }
-
 @media (max-width: 1460px) {
-    .wrapper-catalogies {
+    .wrapper-product {
         width: 100%;
     }
 }
 
-@media (max-width: 970px) {
+@media (max-width: 1390px) {
+    .container-product {
+        &__flowers {
+            margin-bottom: 1.5rem;
+            background-color: $color_lightwhite;
+            border-radius: 10px;
+            @include wihi(100%, 38rem);
+            align-items: center;
+            .container__picture {
+                margin-left: 5rem;
+                padding-right: 1rem;
+                .image-flower {
+                    @include wihi(24rem, 24rem);
+                }
+            }
+        }
+    }
+}
+@media (max-width: 1300px) {
+    .container-product {
+        &__descriptoin-price {
+            display: block;
+        }
+        &__descriptoin-price-euro {
+            margin-bottom: 2.8rem;
+        }
+        &__descriptoin-price-changes {
+            margin-bottom: 2.8rem;
+        }
+        &__photo-description {
+            display: block;
+        }
+    }
+    .button {
+        margin-bottom: 5.4rem;
+    }
+}
+@media (max-width: 1160px) {
+    .container-product {
+        &__flowers {
+            margin-bottom: 1.5rem;
+            background-color: $color_lightwhite;
+            border-radius: 10px;
+            @include wihi(100%, 25rem);
+            align-items: center;
+            .container__picture {
+                margin: 0 2rem;
+                .image-flower {
+                    @include wihi(19.2rem, 19.2rem);
+                }
+            }
+        }
+    }
+}
+@media (max-width: 910px) {
+    .container-product {
+        &__flowers {
+            display: block;
+            @include wihi(33.2rem, 76.6rem);
+            text-align: center;
+            .container__picture {
+                margin-bottom: 2rem;
+            }
+        }
+    }
+    .image-flower {
+        margin-top: 4rem;
+    }
+}
+
+@media (max-width: 886px) {
+    .container-product {
+        margin: 0 7.5% 3.5rem 3%;
+    }
     .container-banners {
         margin-left: 3%;
     }
 }
 
-@media (max-width: 886px) {
-    .container-catalogies {
-        margin: 0 7.5% 3.5rem 3%;
-    }
-}
-
-@media (max-width: 840px) {
-    .container-catalogies {
-        &__filter {
-            display: none;
-        }
-
-        &__filter-products {
-            display: block;
-        }
-
-        &__products-title {
-            display: block;
-            margin-left: 0;
-        }
-
-        &__products {
-            margin-left: 0;
-        }
-
-        &__mobile-buttons {
-            display: inline-block;
-            margin-top: $pt_2rem;
-            margin-bottom: 4rem;
-            display: flex;
-            justify-content: space-between;
-        }
-    }
-
-    .dropdown-button {
-        display: none;
-    }
-}
-
 @media (max-width: 600px) {
-    :host {
-        ::ng-deep .p-button {
-            width: 15.8rem;
-            padding: 2rem 3.6rem;
-        }
-    }
-}
-
-@media (max-width: 450px) {
-    .container-catalogies {
-        margin: 7rem 2rem 0 2rem;
-
+    .container-product {
         &__path {
             margin: 1.5rem auto;
         }
-
-        &__line-main {
-            margin-bottom: 4rem;
+        &__photo {
+            margin-right: 0;
         }
-
-        &__title {
-            background: $color_gradient;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            font-weight: 700;
-            font-size: 3.6rem;
-            line-height: 110%;
-            margin-right: 12%;
-            margin-bottom: 2.2rem;
+        &__photo-image {
+            @include wihi(33.5rem, 33.5rem);
+            margin-bottom: 2rem;
         }
-
-        &__text {
+        &__descriptoin-description {
             width: 33.5rem;
-            margin-bottom: 4rem;
-        }
-
-        &__filter-products {
-            margin-bottom: 6rem;
         }
     }
+    .container__home {
+        margin-right: 1.6rem;
+    }
+    .container__angle {
+        margin-right: 1.6rem;
+    }
     .container-banners {
+        margin-left: 0;
+    }
+}
+@media (max-width: 450px) {
+    .container-product {
+        margin: 7rem 2rem 0 2rem;
+
+        &__path {
+            margin: 1.5rem auto 2.4 auto;
+        }
+        &__photo-images {
+            margin-bottom: 4rem;
+        }
+        &__descriptoin-title {
+            font-size: 2.8rem;
+            line-height: 120%;
+            margin-bottom: 3rem;
+        }
+
+        &__descriptoin-description {
+            margin-bottom: 4rem;
+            width: 33.5rem;
+        }
+
+        &__descriptoin-price-euro {
+            @include font(Montserrat, normal, 700, 3.6rem, 110%, 0em, $color_darkgrey);
+        }
+        &__descriptoin-price-changes {
+            background: url("../../../../assets/img-home/priceChanges.png") 0 0 no-repeat;
+            padding-top: 0rem;
+        }
+        &__descriptions {
+            margin-bottom: 5rem;
+        }
+        &__descriptions-descriptions {
+            margin-bottom: 3.1rem;
+            width: 100%;
+        }
+        &__flowers {
+            margin-bottom: 1.2rem;
+        }
+        &__figcapture {
+            margin: 1.2rem 0 1.8rem 0;
+        }
+        &__text {
+            width: 100%;
+        }
+    }
+    #itemImageMini1 {
+        margin-right: 2rem;
+        @include wihi(14.3rem, 14.3rem);
+    }
+    #itemImageMini {
+        @include wihi(14.3rem, 14.3rem);
+        margin-right: 0;
+    }
+    .button {
+        @include wihi(33.5rem, 5.7rem);
+        padding-left: 4rem;
+        #imageBaggy {
+            margin-right: 4.5rem;
+        }
+    }
+    app-banners {
         margin-left: 0;
     }
 }
