--- a/src/app/Modules/catalog/catalog-items/catalog-items.component.html
+++ b/src/app/Modules/catalog/catalog-items/catalog-items.component.html
@@ -1,18 +1,44 @@
 <div class="container__items">
-    <div class="container__wrap"
-        *ngFor="let item of itemsData |async | paginate: { itemsPerPage: pageSize, currentPage: p }">
-        <div class="container__item" [routerLink]="['/catalog',item.name]" [queryParams]="{categoryName:item.category.name}">
-            <img [src]="getItemImage(item.photo)" alt="img1" class="image-item">
-            <h5 class="container__title">{{item.name}}</h5>
-            <h6 class="opacity">{{item.category.name}}</h6>
-            <p class="container__paragraph">€{{item.priceDto.price}} EUR</p>
-            <button class="button">
-                <img id="imageBaggy" src="../../../../assets/img-home/button-bag.png" alt="baggy">
-                <p class="button__paragraph">ADD TO CART</p>
-            </button>
-        </div>
+  <div
+    class="container__wrap"
+    *ngFor="
+      let item of itemsData
+        | async
+        | paginate: { itemsPerPage: pageSize, currentPage: p }
+    "
+  >
+    <div
+      class="container__item"
+      [routerLink]="['/catalog', item.name]"
+      [queryParams]="{
+        categoryName: item.category.name,
+        id: item.id,
+        price: item.priceDto.price,
+        photo: item.photo,
+        shortDescription: item.shortDescription,
+        description: item.description
+      }"
+    >
+      <img [src]="getItemImage(item.photo)" alt="img1" class="image-item" />
+      <h5 class="container__title">{{ item.name }}</h5>
+      <h6 class="opacity">{{ item.category.name }}</h6>
+      <p class="container__paragraph">€{{ item.priceDto.price }} EUR</p>
+      <button class="button">
+        <img
+          id="imageBaggy"
+          src="../../../../assets/img-home/button-bag.png"
+          alt="baggy"
+        />
+        <p class="button__paragraph">ADD TO CART</p>
+      </button>
     </div>
-    <pagination-controls class="my-pag" (pageChange)="p=($event)" [directionLinks]="false" [maxSize]="5">
-        <pagination-template></pagination-template>
-    </pagination-controls>
+  </div>
+  <pagination-controls
+    class="my-pag"
+    (pageChange)="p = $event"
+    [directionLinks]="false"
+    [maxSize]="5"
+  >
+    <pagination-template></pagination-template>
+  </pagination-controls>
 </div>
