--- a/src/app/Modules/catalog/catalog.component.html
+++ b/src/app/Modules/catalog/catalog.component.html
@@ -1,99 +1,174 @@
 <div class="wrapper-catalog">
-    <div class="container-catalog">
-        <div class="container-catalog__line"></div>
-        <div class="container-catalog__path flex justify-content-start">
-            <div class="container__home">
-                <a class="container__link" routerLink="/">Home</a>
-            </div>
-            <div class="container__angle">
-                <img src="../../../assets/img-aboutus/Angle.png" alt="angle">
-            </div>
-            <div *ngIf="categoriesFilterName" class="container__home">
-                <a class="container__link" routerLink="/catalog">Catalog</a>
-            </div>
-            <div *ngIf="!categoriesFilterName" class="container__catalogs">Catalog</div>
-            <div class="container-categories flex justify-content-start" *ngIf="categoriesFilterName">
-                <div class="container__angle">
-                    <img src="../../../../assets/img-aboutus/Angle.png" alt="angle">
-                </div>
-                <div class="container__catalogs-categories">{{categoriesFilterName}}</div>
-            </div>
-        </div>
-        <div class="container-catalog__swiper">
-            <app-home-swiper-list></app-home-swiper-list>
-        </div>
-        <div class="container-catalog__line-main"></div>
-        <div *ngIf="!categoriesFilterName" class="container-catalog__title">Catalog</div>
-        <div *ngIf="categoriesFilterName" class="container-catalog__title">{{categoriesFilterName}}</div>
-        <p class="container-catalog__text">For several years now, our company has been delighting customers with the
-            delivery
-            of flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees
-            and are always confident that your order will be delivered at the right time to the right place.</p>
-        <div class="container-catalog__filter-products">
-            <div class="container-catalog__filter">
-                <div class="container-catalog__filter-title">Filter</div>
-                <div class="container-catalog__filter-cost">
-                    <div class="container-catalog__filter-cost-title">Cost</div>
-                    <div class="container-catalog__filter-cost-min-max flex justify-content-between">
-                        <div class="p-float-label">
-                            <p-inputNumber inputId="currency-min" mode="currency" [(ngModel)]="rangeValues[0]"
-                                currency="EUR" locale="en-US">
-                            </p-inputNumber>
-                            <label for="currency-min" class="filter-min">From</label>
-                        </div>
-                        <div class="p-float-label">
-                            <p-inputNumber inputId="currency-max" [(ngModel)]="rangeValues[1]" mode="currency"
-                                currency="EUR" locale="en-US">
-                            </p-inputNumber>
-                            <label for="currency-max" class="filter-max">To</label>
-                        </div>
-                    </div>
-                    <p-slider [(ngModel)]="rangeValues" [range]="true" [min]="0" [max]="300"></p-slider>
-                </div>
-                <div class="container-catalog__filter-category">
-                    <div class="container-catalog__filter-category-title">Category</div>
-                    <div class="container-catalog__filter-category-checkbox">
-                        <div *ngFor="let category of categoriesData|async  " class="field-checkbox">
-                            <p-checkbox name="group2" [(ngModel)]="checked" value="category" [value]="category"
-                                class="p-label-active" [inputId]="category.key" [label]="category.name"
-                                (onChange)="filterCategories($event)">
-                            </p-checkbox>
-                        </div>
-                    </div>
-                </div>
-                <div class="container-catalog__filter-additional">
-                    <div class="container-catalog__filter-additional-title">Additional filters</div>
-                    <div class="field-checkbox">
-                        <p-checkbox name="group1" [(ngModel)]="checked" inputId="st" class="p-label-active"
-                            label="In stock" value="In stock">
-                        </p-checkbox>
-                    </div>
-                </div>
-                <div class="container-catalog__filter-buttons">
-                    <p-button class="container-catalog__filter-buttons-button1" label="Apply filter" icon="pi pi-check">
-                    </p-button>
-                    <button pButton pRipple type="button" (click)="clearFilter()" label="Clear filter"
-                        class="p-button-outlined p-button-success container-catalog__filter-buttons-button2"></button>
-                </div>
-            </div>
-            <div class="container-catalog__products">
-                <div class="container-catalog__products-title" *ngIf="itemsData|async as data">
-                    <p class="container-catalog__products-quantity">{{data.length}} products found</p>
-                    <p-dropdown [options]="categories" placeholder="Sort by..." optionLabel="name" [editable]="true"
-                        [showClear]="true" [(ngModel)]="searchText" class="dropdown-button">
-                    </p-dropdown>
-                    <div class="container-catalog__mobile-buttons">
-                        <button pButton pRipple type="button" label="Filter"
-                            class="p-button-outlined p-button-success container-catalog__mobile-buttons-filter"></button>
-                        <button pButton pRipple type="button" label="Sorting"
-                            class="p-button-outlined p-button-success container-catalog__mobile-buttons-sorting"></button>
-                    </div>
-                </div>
-                <app-catalog-items></app-catalog-items>
-            </div>
-        </div>
+  <div class="container-catalog">
+    <div class="container-catalog__line"></div>
+    <div class="container-catalog__path flex justify-content-start">
+      <div class="container__home">
+        <a class="container__link" routerLink="/">Home</a>
+      </div>
+      <div class="container__angle">
+        <img src="../../../assets/img-aboutus/Angle.png" alt="angle" />
+      </div>
+      <div *ngIf="categoriesFilterName" class="container__home">
+        <a class="container__link" routerLink="/catalog">Catalog</a>
+      </div>
+      <div *ngIf="!categoriesFilterName" class="container__catalogs">
+        Catalog
+      </div>
+      <div *ngIf="categoriesFilterName" class="container__angle">
+        <img src="../../../../assets/img-aboutus/Angle.png" alt="angle" />
+      </div>
+      <div *ngIf="categoriesFilterName" class="container__catalogs-categories">
+        {{ categoriesFilterName }}
+      </div>
     </div>
-    <div class="container-banners">
-        <app-banners></app-banners>
+    <div class="container-catalog__swiper">
+      <app-home-swiper-list></app-home-swiper-list>
     </div>
+    <div class="container-catalog__line-main"></div>
+    <div *ngIf="!categoriesFilterName" class="container-catalog__title">
+      Catalog
+    </div>
+    <div *ngIf="categoriesFilterName" class="container-catalog__title">
+      {{ categoriesFilterName }}
+    </div>
+    <p class="container-catalog__text">
+      For several years now, our company has been delighting customers with the
+      delivery of flowers and congratulations. We are really proud of the clear
+      and well-coordinated work of our employees and are always confident that
+      your order will be delivered at the right time to the right place.
+    </p>
+    <div class="container-catalog__filter-products">
+      <div class="container-catalog__filter">
+        <div class="container-catalog__filter-title">Filter</div>
+        <div class="container-catalog__filter-cost">
+          <div class="container-catalog__filter-cost-title">Cost</div>
+          <div
+            class="container-catalog__filter-cost-min-max flex justify-content-between"
+          >
+            <div class="p-float-label">
+              <p-inputNumber
+                inputId="currency-min"
+                mode="currency"
+                [(ngModel)]="rangeValues[0]"
+                currency="EUR"
+                locale="en-US"
+              >
+              </p-inputNumber>
+              <label for="currency-min" class="filter-min">From</label>
+            </div>
+            <div class="p-float-label">
+              <p-inputNumber
+                inputId="currency-max"
+                [(ngModel)]="rangeValues[1]"
+                mode="currency"
+                currency="EUR"
+                locale="en-US"
+              >
+              </p-inputNumber>
+              <label for="currency-max" class="filter-max">To</label>
+            </div>
+          </div>
+          <p-slider
+            [(ngModel)]="rangeValues"
+            [range]="true"
+            [min]="0"
+            [max]="300"
+          ></p-slider>
+        </div>
+        <div class="container-catalog__filter-category">
+          <div class="container-catalog__filter-category-title">Category</div>
+          <div class="container-catalog__filter-category-checkbox">
+            <div
+              *ngFor="let category of categoriesData | async"
+              class="field-checkbox"
+            >
+              <p-checkbox
+                name="group2"
+                [(ngModel)]="checked"
+                value="category"
+                [value]="category"
+                class="p-label-active"
+                [inputId]="category.key"
+                [label]="category.name"
+                (onChange)="filterCategories($event)"
+              >
+              </p-checkbox>
+            </div>
+          </div>
+        </div>
+        <div class="container-catalog__filter-additional">
+          <div class="container-catalog__filter-additional-title">
+            Additional filters
+          </div>
+          <div class="field-checkbox">
+            <p-checkbox
+              name="group1"
+              [(ngModel)]="checked"
+              inputId="st"
+              class="p-label-active"
+              label="In stock"
+              value="In stock"
+            >
+            </p-checkbox>
+          </div>
+        </div>
+        <div class="container-catalog__filter-buttons">
+          <p-button
+            class="container-catalog__filter-buttons-button1"
+            label="Apply filter"
+            icon="pi pi-check"
+          >
+          </p-button>
+          <button
+            pButton
+            pRipple
+            type="button"
+            (click)="clearFilter()"
+            label="Clear filter"
+            class="p-button-outlined p-button-success container-catalog__filter-buttons-button2"
+          ></button>
+        </div>
+      </div>
+      <div class="container-catalog__products">
+        <div
+          class="container-catalog__products-title"
+          *ngIf="itemsData | async as data"
+        >
+          <p class="container-catalog__products-quantity">
+            {{ data.length }} products found
+          </p>
+          <p-dropdown
+            [options]="categories"
+            placeholder="Sort by..."
+            optionLabel="name"
+            [editable]="true"
+            [showClear]="true"
+            [(ngModel)]="searchText"
+            class="dropdown-button"
+          >
+          </p-dropdown>
+          <div class="container-catalog__mobile-buttons">
+            <button
+              pButton
+              pRipple
+              type="button"
+              label="Filter"
+              class="p-button-outlined p-button-success container-catalog__mobile-buttons-filter"
+            ></button>
+            <button
+              pButton
+              pRipple
+              type="button"
+              label="Sorting"
+              class="p-button-outlined p-button-success container-catalog__mobile-buttons-sorting"
+            ></button>
+          </div>
+        </div>
+        <app-catalog-items></app-catalog-items>
+      </div>
+    </div>
+  </div>
+  <div class="container-banners">
+    <app-banners></app-banners>
+  </div>
 </div>
